// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CheckBox /> should render a disabled CheckBox 1`] = `
<div>
  <label
    class="label isDisabled"
    for="checkbox-2"
  >
    <input
      class="input"
      disabled=""
      id="checkbox-2"
      name="checkbox-2"
      type="checkbox"
    />
    Shopify
  </label>
  <div
    class="caption"
  />
</div>
`;

exports[`<CheckBox /> should render an enabled CheckBox 1`] = `
<div>
  <label
    class="label"
    for="checkbox-1"
  >
    <input
      class="input"
      id="checkbox-1"
      name="checkbox-1"
      type="checkbox"
    />
    Shopify
  </label>
  <div
    class="caption"
  />
</div>
`;

exports[`<CheckBox /> should render caption under the checkbox 1`] = `
<div>
  <label
    class="label"
    for="checkbox-3"
  >
    <input
      class="input"
      id="checkbox-3"
      name="checkbox-3"
      type="checkbox"
    />
    Shopify
  </label>
  <div
    class="caption"
  >
    first e-commerce platform
  </div>
</div>
`;
